# resilient-redis-queue

./: .gitignore  Dockerfile  README.md  compose.yaml  docker.sh  dockerfile  pyproject.toml  test_redis.py  test_rrq.py
docker/rrq/: Dockerfile  docker.sh
docker/web/: Dockerfile  docker.sh  package-lock.json  package.json
resilient_redis_queue/: .env.example  Cargo.toml  cmds.sh
resilient_redis_queue/src/: lib.rs  main.rs
resilient_redis_queue/src/models/: consume.rs
resilient_redis_queue/src/routes/: complete.rs  consume.rs  delete.rs  health.rs  information.rs  mod.rs  produce.rs  queues.rs
resilient_redis_queue/src/services/: cleanup.rs
resilient_redis_queue/src/utils/: auth.rs  config_redis.rs  errors.rs  failure.rs  mod.rs  redis.rs  success.rs
rrq/: .env.example  cmds.sh
rrq/src/: lib.rs
rrq/src/routes/: health.rs  mod.rs  produce.rs
rrq/src/utils/: config_redis.rs  errors.rs  mod.rs  namespace.rs  redis.rs  success.rs
web/analytics/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
web/analytics/src/: App.css  App.tsx  index.tsx  main.tsx  vite-env.d.ts
web/analytics/src/components/: APIKeyForm.tsx  QueueChart.tsx  QueueList.tsx  RedisInfo.tsx  SearchForm.tsx
web/analytics/src/hooks/: useInformation.ts  useQueues.ts
web/analytics/src/models/: apiCalls.model.ts  components.model.ts
web/analytics/src/services/: axiosConfig.ts  informationApi.ts  queuesApi.ts
