[package]
name = "resilient_redis_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
models = { path = "../models" }
actix-web = "4.0.0"
actix-rt = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
thiserror = "1.0.63"
