[package]
name = "rrq"
version = "0.1.0"
edition = "2021"
default-run = "rrq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.0.0"
actix-rt = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
thiserror = "1.0.63"
deadpool-redis = { version = "0.16.0", features = ["serde"] }
config = "0.14.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.31"  
